--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     rev: v4.4.0
     hooks:
       - id: check-added-large-files
+        exclude: "sql/"
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
